[package]
name = "yew_form"
version = "0.1.8"
authors = ["J-F Bilodeau <jfbilodeau@chronogears.com>"]
edition = "2021"
description = "Bringing MVC to Yew! A set mildly opinionated Yew component to map and validate a model to a HTML form"
license = "MIT"
repository = "https://github.com/thebearjew/yew_form"
readme = "../README.md"
categories = [ "web-programming" ]

[dependencies]
wasm-bindgen = "0.2"
validator = { version = "0.15", features=["derive"] }
yew = {git = "https://github.com/yewstack/yew"}
gloo-console = "0.2"
yew_form_derive = {path = "../yew_form_derive"}

[dependencies.web-sys]
version = "0.3"
features = [
"HtmlInputElement",
"HtmlSelectElement",
"HtmlTextAreaElement"
]
